2014-11-04  Michael Albinus  <michael.albinus@gmx.de>

        * net/tramp-sh.el (tramp-do-copy-or-rename-file-via-buffer): Don't use
        a local copy; setting `inhibit-file-name-handlers' proper might be
        more performant.  (Bug#18751)

2014-11-04  Glenn Morris  <rgm@gnu.org>

	* mail/emacsbug.el (report-emacs-bug): No longer include
	recent-keys in the report.  (Bug#18900)

2014-11-03  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-do-copy-or-rename-file-via-buffer): Use a
	local copy of FILENAME, when it is remote.  (Bug#18751)

2014-11-02  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-adb.el (tramp-adb-handle-process-file): Do not raise
	an error when the command fails; the return code must indicate.
	(tramp-adb-send-command-and-check): Fix docstring.

2014-11-01  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-cache.el (tramp-get-file-property)
	(tramp-set-file-property): Check, that `tramp-cache-get-count-*'
	and `tramp-cache-set-count-*' are bound.  Otherwise, there might
	be compiler warnings.

	* net/tramp-sh.el (tramp-get-remote-uid, tramp-get-remote-gid):
	Return -1 respective "UNKNOWN", if uid or gid cannot be determined.

2014-11-01  Eli Zaretskii  <eliz@gnu.org>

	* progmodes/compile.el (compilation-mode): Turn off deferred
	fontifications locally.  (Bug#18856)

2014-11-01  Wolfgang Jenkner  <wjenkner@inode.at>

	* net/tramp-sh.el (tramp-send-command): Fix the case where the
	remote-echo connection property is non-nil (bug#18858).

2014-11-01  Michael Albinus  <michael.albinus@gmx.de>

	Backport Tramp changes from trunk.

	* net/tramp.el (tramp-methods): Tweak docstring.
	(tramp-file-name-handler): Apply `cons' where appropriate.
	(tramp-handle-file-accessible-directory-p): Check for
	`file-readable-p' instead of `file-executable-p'.
	(tramp-handle-shell-command): Use `display-buffer'.  (Bug#18326)
	(tramp-handle-unhandled-file-name-directory): Return "/".
	(tramp-check-cached-permissions):